Some changes after walkthrough with Kris